# adk-test-python

./: .gitignore  GEMINI.md  Makefile  README.md  pyproject.toml  starter_pack_README.md  starter_pack_pyproject.toml
.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
deployment/terraform/: variables.tf
deployment/terraform/dev/: variables.tf
deployment/terraform/dev/vars/: env.tfvars
deployment/terraform/vars/: env.tfvars
my_agent/: agent.py
my_agent/app_utils/: deploy.py  telemetry.py  typing.py
tests/integration/: test_agent_engine_app.py
