[project]
name = "adk-test-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10.19,<=3.10.19"
dependencies = [
    "google-adk>=1.15.0,<2.0.0",
]

[dependency-groups]
dev = [
    "mcp (>=1.22.0,<2.0.0)"
]
